fix comments and replies

--- a/client/public/locales/cz/translation.json
+++ b/client/public/locales/cz/translation.json
@@ -33,7 +33,8 @@
     "comment": {
       "title": "Komentáře",
       "reply": "Odpovědět",
-      "inputPlaceholder": "Napište komentář"
+      "inputPlaceholder": "Napište komentář",
+      "commentDeleted": "Komentář smazán."
     },
     "common": {
       "filter": "Filtr",
