fix comments and replies errors

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -75,7 +75,8 @@
     }
   },
   "toast": {
-    "unauthenticated": "Not authenticated"
+    "unauthenticated": "Not authenticated",
+    "invalidText": "Invalid text"
   },
   "genres": {
     "Action": {
