--- a/client/public/locales/cz/translation.json
+++ b/client/public/locales/cz/translation.json
@@ -75,7 +75,8 @@
     }
   },
   "toast": {
-    "unauthenticated": "Nepřihlášen"
+    "unauthenticated": "Nepřihlášen",
+    "invalidText": "Neplatný text"
   },
   "genres": {
     "Action": {
